# memflex

./: Cargo.toml  README.md
examples/: bitstruct.rs  checked_ptr.rs  function.rs  global_int.rs  iter_linked.rs  iter_proc.rs  maps.rs  pattern.rs  process.rs  read.rs
src/: error.rs  global.rs  lib.rs  memory.rs  pattern.rs  ptr.rs
src/internal/: mod.rs  unix.rs  win.rs
src/macros/: bitstruct.rs  cell.rs  function.rs  global.rs  interface.rs  makestruct.rs  mod.rs  strings.rs
src/pattern/: dynamic.rs  mod.rs  static.rs
src/ptr/: const.rs  mod.rs  mut.rs
src/types/: mod.rs  prot.rs  strptr.rs  tstr.rs  unicode.rs  vmt.rs
src/types/win/: flags.rs  keys.rs  linked.rs  mod.rs  nt.rs  unicode.rs
tests/: interface.rs  linked.rs  macro_global.rs  macro_interface.rs  macro_makestruct.rs  makestruct.rs  multilevel.rs  parenting.rs  pattern.rs  unicode.rs
