[package]
name = "memflex"
version = "0.1.0"
edition = "2021"
authors = ["ItsEthra"]
license = "MIT"
repository = "https://github.com/ItsEthra/memflex"
readme = "README.md"

[features]
default = ["std", "internal"]
std = ["alloc"]
alloc = []
internal = []
external = []

[dependencies]
memoffset = "0.6"
bitflags = "1.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.43"
features = [
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
]