[package]
name = "memflex"
version = "0.2.0"
edition = "2021"
description = "Memory hacking library"
authors = ["ItsEthra"]
keywords = ["os", "memory", "hacking", "process"]
categories = ["os"]
license = "MIT"
repository = "https://github.com/ItsEthra/memflex"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

[features]
default = ["std", "internal"]
std = ["alloc"]
alloc = []
internal = []
external = ["std"]

[dependencies]
memoffset = "0.6"
bitflags = "1.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.43"
features = [
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
]
