[package]
name = "memflex"
version = "0.5.4"
edition = "2021"
description = "Memory hacking library"
authors = ["ItsEthra"]
keywords = ["os", "memory", "hacking", "process"]
categories = ["os"]
license = "MIT"
repository = "https://github.com/ItsEthra/memflex"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

[features]
default = ["std", "internal"]
std = ["alloc", "windows", "libc"]
alloc = []
internal = ["std"]
external = ["std"]

[dependencies]
memoffset = "0.6"
bitflags = "1.3"
obfstr = "0.4.3"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"
optional = true

[target.'cfg(windows)'.dependencies.windows]
version = "0.43"
optional = true
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
]
